Closed Bug 1690775 Opened 5 years ago Closed 4 years ago

New wpt crashes in /fetch/h1-parsing/lone-cr.window.html

Categories

(Core :: DOM: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox87 --- fixed

People

(Reporter: wpt-sync, Assigned: emilio)

References

Details

(Whiteboard: [wpt])

Attachments

(1 file)

Syncing wpt PR 13524 found new crashes in CI

Affected Tests

/fetch/h1-parsing/lone-cr.window.html: CRASH [Gecko-android-em-7.0-x86_64-debug-geckoview, Gecko-android-em-7.0-x86_64-qr-debug-geckoview], ERROR [Gecko-linux1804-64-debug, Gecko-linux1804-64-qr-debug, Gecko-windows10-64-debug, Gecko-windows10-64-qr-debug, Gecko-windows7-32-debug], OK [Gecko-android-em-7.0-x86_64-opt-geckoview, Gecko-android-em-7.0-x86_64-qr-opt-geckoview, Gecko-linux1804-64-tsan-opt, Gecko-windows10-64-opt, Gecko-windows10-64-qr-opt, Gecko-windows7-32-opt, GitHub]

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

Getting the crash signature into these bug reports is a TODO; sorry

These updates will be on mozilla-central once bug 1499091 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

Pushed by btara@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/875a43504848 Update expectance to error or crash on linux debug CLOSED TREE

The code enters that function with a non-empty mLineBuf (mLineBuf =
"BODY"), and we just add a single "\n", so we never really end up
finishing the header section, and fetch code asserts and reads uninit
memory afterwards. Bad!

The intention of that code is to finish parsing the headers section, so
it should make sure to handle it properly if we have a partial line
already read. For that we need two newlines.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Keywords: leave-open

Sorry Jared, the expectance update didn't work.

Push with failures: https://treeherder.mozilla.org/jobs?repo=autoland&group_state=expanded&fromchange=5338c029ee7c7b2ed24aefe56dd69e75b1f0d216&searchStr=linux%2C18.04%2Cx64%2Cwebrender%2Cdebug%2Cweb%2Cplatform%2Ctests%2Cwith%2Cfission%2Cenabled%2Ctest-linux1804-64-qr%2Fdebug-web-platform-tests-fis-e10s%2Cwpt8&selectedTaskRun=D0GoKHPqRNyFGNOkxrk7gw.0&tochange=96508d0c910050edc14dd95cd9af86036dac0b90

Backout link: https://hg.mozilla.org/integration/autoland/rev/96508d0c910050edc14dd95cd9af86036dac0b90

Failure log: https://treeherder.mozilla.org/logviewer?job_id=329586446&repo=autoland&lineNumber=12816

[task 2021-02-11T05:21:24.915Z] 05:21:24     INFO - TEST-START | /fetch/h1-parsing/lone-cr.window.html
[task 2021-02-11T05:21:25.695Z] 05:21:25     INFO - PID 10744 | [Parent 10744, Main Thread] WARNING: response headers not available or incomplete: file /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpTransaction.cpp:542
[task 2021-02-11T05:21:25.695Z] 05:21:25     INFO - PID 10744 | [Parent 10744, Main Thread] WARNING: No response head in OnStartRequest: file /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:7419
[task 2021-02-11T05:21:25.695Z] 05:21:25     INFO - PID 10744 | Assertion failure: ((bool)(__builtin_expect(!!(!NS_FAILED_impl(rv)), 1))), at /builds/worker/checkouts/gecko/dom/fetch/FetchDriver.cpp:960
[task 2021-02-11T05:21:25.708Z] 05:21:25     INFO - STDOUT: Initializing stack-fixing for the first stack frame, this may take a while...
[task 2021-02-11T05:21:26.291Z] 05:21:26     INFO - mozcrash Copy/paste: /builds/worker/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmpeu7dekwm/minidumps/2e71f3fa-4bb8-7187-0466-a05ada5a004a.dmp /builds/worker/workspace/build/symbols
[task 2021-02-11T05:21:34.862Z] 05:21:34     INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/2e71f3fa-4bb8-7187-0466-a05ada5a004a.dmp
[task 2021-02-11T05:21:34.863Z] 05:21:34     INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/2e71f3fa-4bb8-7187-0466-a05ada5a004a.extra
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO - PROCESS-CRASH | /fetch/h1-parsing/lone-cr.window.html | application crashed [@ mozilla::dom::FetchDriver::OnStartRequest(nsIRequest*)]
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO - Mozilla crash reason: MOZ_ASSERT(((bool)(__builtin_expect(!!(!NS_FAILED_impl(rv)), 1))))
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO - Crash dump filename: /tmp/tmpeu7dekwm/minidumps/2e71f3fa-4bb8-7187-0466-a05ada5a004a.dmp
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO - Operating system: Linux
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO -                   0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO - CPU: amd64
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO -      family 6 model 85 stepping 4
[task 2021-02-11T05:21:35.023Z] 05:21:35     INFO -      4 CPUs
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - 
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - GPU: UNKNOWN
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - 
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - Crash reason:  SIGSEGV /SEGV_MAPERR
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - Crash address: 0x0
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - Process uptime: not available
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - 
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO - Thread 0 (crashed)
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO -  0  libxul.so!mozilla::dom::FetchDriver::OnStartRequest(nsIRequest*) [FetchDriver.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 960 + 0x29]
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO -     rax = 0x00007f48dcf0739f   rdx = 0x0000000000000000
[task 2021-02-11T05:21:35.024Z] 05:21:35     INFO -     rcx = 0x000055ac37a80e18   rbx = 0x00007ffe914980b8
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rsi = 0x00007f48f0b3f8b0   rdi = 0x00007f48f0b3e680
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rbp = 0x00007ffe91498260   rsp = 0x00007ffe91498080
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -      r8 = 0x00007f48f0b3f8b0    r9 = 0x00007f48f1a34780
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r10 = 0x0000000000000002   r11 = 0x0000000000000000
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r12 = 0x00007f48f031e970   r13 = 0x00007f48d2fbf700
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r14 = 0x00007f48d2f4c080   r15 = 0x00007ffe91498118
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rip = 0x00007f48e1dfa094
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     Found by: given as instruction pointer in context
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -  1  libxul.so!nsCORSListenerProxy::OnStartRequest(nsIRequest*) [nsCORSListenerProxy.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 447 + 0x14]
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rbx = 0x00007f48f031e970   rbp = 0x00007ffe91498310
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rsp = 0x00007ffe91498270   r12 = 0x00007ffe91498280
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r13 = 0x00007f48d2fbf700   r14 = 0x00007f48d2f4c080
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r15 = 0x00007f48d2fbf778   rip = 0x00007f48e000b74b
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     Found by: call frame info
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -  2  libxul.so!mozilla::net::HttpChannelChild::DoOnStartRequest(nsIRequest*, nsISupports*) [HttpChannelChild.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 592 + 0x14]
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rbx = 0x00007f48d2f4c000   rbp = 0x00007ffe91498360
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rsp = 0x00007ffe91498320   r12 = 0x00007ffe91498328
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r13 = 0x00007f48d2f4d8c0   r14 = 0x00007f48d2f4c160
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r15 = 0x00007f48d2f4c080   rip = 0x00007f48dffbe450
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     Found by: call frame info
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -  3  libxul.so!mozilla::net::HttpChannelChild::OnStartRequest(mozilla::net::nsHttpResponseHead const&, bool const&, mozilla::net::nsHttpHeaderArray const&, mozilla::net::HttpChannelOnStartRequestArgs const&) [HttpChannelChild.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 523 + 0xf]
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rbx = 0x00007f48d2f4c000   rbp = 0x00007ffe91498480
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rsp = 0x00007ffe91498370   r12 = 0x00007f48d2f4c030
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r13 = 0x00007f48d2f4d8c0   r14 = 0x00007f48d2f4d8d0
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     r15 = 0x00007ffe91498390   rip = 0x00007f48dffbe190
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     Found by: call frame info
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -  4  libxul.so!mozilla::net::ChannelEventQueue::FlushQueue() [ChannelEventQueue.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 90 + 0x12]
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rbx = 0x00007f48d2fa5700   rbp = 0x00007ffe914984f0
[task 2021-02-11T05:21:35.025Z] 05:21:35     INFO -     rsp = 0x00007ffe91498490   r12 = 0x00007ffe91498560
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     r13 = 0x00007ffe914984a0   r14 = 0x00007f48d2fa5728
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     r15 = 0x00007ffe914984a8   rip = 0x00007f48e00b98de
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     Found by: call frame info
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -  5  libxul.so!mozilla::net::ChannelEventQueue::ResumeInternal()::CompleteResumeRunnable::Run() [ChannelEventQueue.cpp:875a4350484849d1ac79a4cc83727903a108c513 : 148 + 0x29]
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     rbx = 0x00007f48d2fa5700   rbp = 0x00007ffe91498510
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     rsp = 0x00007ffe91498500   r12 = 0x00007ffe91498560
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     r13 = 0x00007f48e6b45ec8   r14 = 0x00007f48d2fa5728
[task 2021-02-11T05:21:35.026Z] 05:21:35     INFO -     r15 = 0x00007f48d2f7b470   rip = 0x00007f48e00d2901
[task 2021-02-11Ta05:21:35.026Z] 05:21:35     INFO -     Found by: call frame info
....
Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

James, can you explain how the annotation should have looked like? The Linux debug failure didn't get suppressed.

Flags: needinfo?(james)

So, the PROCESS-CRASH is an expected crash, so that on its own shouldn't have affected the overall status. Given there's a leak you possibly also need to suppress the leak check here (maybe if there's an expected crash we should automatically suppress the leak check?) e.g. by setting

lsan-disabled:
  if os == "linux" and debug: true

I think that might have been enough, but if not it's probably necessary to disable the test.

Flags: needinfo?(james)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/89ac26b3b792 Fix code to parse the remaining header to actually finish consuming it. r=dragana,necko-reviewers

Doe this still need to have leave-open? It looks like the fix landed in Firefox 87.

Flags: needinfo?(emilio)
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Flags: needinfo?(emilio)
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: